<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/MTargetGoal"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="440dp"
        android:hint="000"
        android:text="50"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="95dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="452dp"
        android:text="MoveTarget:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RTargetGoal"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="396dp"
        android:hint="000"
        android:text="90"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RecievedText"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nulltemp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/recieved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/connectivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/fButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="8dp"
        android:outlineProvider="none"
        android:src="@drawable/baseline_expand_less_black_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/lButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:src="@drawable/baseline_chevron_left_black_48"
        app:layout_constraintEnd_toEndOf="@+id/sButton"
        app:layout_constraintTop_toBottomOf="@+id/sButton" />

    <ImageButton
        android:id="@+id/rButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:outlineProvider="none"
        android:src="@drawable/baseline_chevron_right_black_48"
        app:layout_constraintStart_toStartOf="@+id/mButton"
        app:layout_constraintTop_toBottomOf="@+id/mButton" />

    <ImageButton
        android:id="@+id/bButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="8dp"
        android:outlineProvider="none"
        android:src="@drawable/baseline_expand_more_black_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sButton"
        android:layout_width="72dp"
        android:layout_height="67dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="4dp"
        android:outlineProvider="none"
        android:src="@drawable/baseline_settings_input_antenna_black_48dp"
        app:layout_constraintEnd_toStartOf="@+id/bButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mButton"
        android:layout_width="72dp"
        android:layout_height="68dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="164dp"
        android:outlineProvider="none"
        android:src="@drawable/baseline_audiotrack_black_48dp"
        app:layout_constraintStart_toEndOf="@+id/bButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/connectedMeasure"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <ImageView
        android:id="@+id/ErrConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/its_here"
        app:layout_constraintBottom_toBottomOf="@+id/connectedMeasure"
        app:layout_constraintStart_toStartOf="@+id/connectedMeasure"
        app:srcCompat="@android:drawable/btn_dialog"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/ConnectedInd"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/its_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ErrConnect"
        app:srcCompat="@android:drawable/presence_online"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/restartButton"
        android:layout_width="87dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/connectedMeasure"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="408dp"
        android:text="RotationTarget:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>